[package]
name = "sqlite-vec"
version = "0.2.0-alpha"
edition = "2021"
authors = ["Alex Garcia <alexsebastian.garcia@gmail.com>"]
description = "FFI bindings to the sqlite-vec SQLite extension"
homepage = "https://github.com/vlasky/sqlite-vec"
repository = "https://github.com/vlasky/sqlite-vec"
keywords = ["sqlite", "sqlite-extension"]
license = "MIT OR Apache-2.0"

[dependencies]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rusqlite = "0.31.0"
