[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-vec"
version = "0.2.0a0"
description = "A vector search SQLite extension that runs anywhere"
readme = "README.md"
authors = [
    {name = "Alex Garcia", email = "alex@alex.garcia"},
]
maintainers = [
    {name = "Vlad Lasky"},
]
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/vlasky/sqlite-vec"
Documentation = "https://alexgarcia.xyz/sqlite-vec"
Repository = "https://github.com/vlasky/sqlite-vec"
"Original Repository" = "https://github.com/asg017/sqlite-vec"
Changelog = "https://github.com/vlasky/sqlite-vec/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["sqlite_vec"]

[tool.setuptools.package-data]
sqlite_vec = ["*.so", "*.dylib", "*.dll"]
